--- a/index.html
+++ b/index.html
@@ -14,13 +14,51 @@
             <img class="header__logo" src="icons/Icon-logo.svg" alt="Логотип воздушний шар">
             <div class="header__box">
                 <h1 class="title-first">
-                    <span class="title-first__main">ТУРЫ НА ВОЗДУШНОМ ШАРЕ</span>
-                    <span class="title-first__secondary">незабываемое приключение ждет вас</span>
+                    <span class="title-first__main">Balloon tours</span>
+                    <span class="title-first__secondary">unforgettable adventure awaits you</span>
                 </h1>
 
-                <a href="#" class="btn btn_animated">наш каталог</a>
+                <a href="#" class="btn btn_animated">Our catalog</a>
             </div>
         </header>
+
+        <main>
+            <section class="section-about">
+                <div class="text-align-center margin-bottom-80px">
+                    <h2 class="title-secondary">
+                        incredible sense of freedom
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="title-third margin-bottom-10px">
+                            Позвольте себе приключение
+                        </h3>
+                        <p class="paragraph margin-bottom-30px">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel quos quis enim corrupti labore ex! Quidem, possimus iusto! Beatae earum rerum cupiditate enim impedit neque voluptatem cumque commodi. Ipsum?
+                        </p>
+
+                        <h3 class="title-third margin-bottom-10px">
+                            Lorem ipsum dolor sit
+                        </h3>
+                        <p class="paragraph margin-bottom-50px">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel quos quis enim corrupti labore ex! Quidem, possimus iusto! Beatae earum rerum cupiditate enim impedit neque voluptatem cumque commodi. Ipsum?
+                        </p>
+
+                        <a href="#" class="btn-text">Read more &rarr;</a>
+                    </div>
+
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="img/photo-ballons-1.png" alt="Photo-ballons-1" class="composition__photo composition__photo_n1">
+                            <img src="img/photo-ballons-2.png" alt="Photo-ballons-2" class="composition__photo composition__photo_n2">
+                            <img src="img/photo-ballons-3.png" alt="Photo-ballons-3" class="composition__photo composition__photo_n3">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 </html>
