--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
-    <title>Document</title>
+    <link rel="stylesheet" href="css/icon-font.css">
+    <title>Ballons</title>
 </head>
 <body>
     <div class="container">
@@ -55,6 +55,78 @@
                             <img src="img/photo-ballons-2.png" alt="Photo-ballons-2" class="composition__photo composition__photo_n2">
                             <img src="img/photo-ballons-3.png" alt="Photo-ballons-3" class="composition__photo composition__photo_n3">
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-adventure">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <i class="adventure-card__icon icon-Vector-3 margin-bottom-30px"></i>
+                            <h3 class="title-third margin-bottom-10px">Adventures</h3>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <i class="adventure-card__icon icon-Vector-2 margin-bottom-30px"></i>
+                            <h3 class="title-third margin-bottom-10px">Adventures</h3>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <i class="adventure-card__icon icon-Vector margin-bottom-30px"></i>
+                            <h3 class="title-third margin-bottom-10px">Adventures</h3>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <i class="adventure-card__icon icon-Vector-1 margin-bottom-30px"></i>
+                            <h3 class="title-third margin-bottom-10px">Adventures</h3>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-tour">
+                <div class="text-align-center margin-bottom-80px">
+                    <h2 class="title-secondary">
+                        the most popular tours
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img margin-bottom-50px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">group</span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">tours</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <li>Groups of 6 people</li>
+                                        <li>Duration 2 hours</li>
+                                        <li>1 guide in the group</li>
+                                        <li>Flight range 6 km</li>
+                                        <li>Free souvenirs</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-tour__side card-tour__side_back">Back</div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+
+                    </div>
+                    <div class="col-1-of-3">
+
                     </div>
                 </div>
             </section>
