--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/icon-font.css">
     <title>Ballons</title>
 </head>
+
 <body>
     <div class="container">
         <header class="header">
@@ -36,14 +40,18 @@
                             Позвольте себе приключение
                         </h3>
                         <p class="paragraph margin-bottom-30px">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel quos quis enim corrupti labore ex! Quidem, possimus iusto! Beatae earum rerum cupiditate enim impedit neque voluptatem cumque commodi. Ipsum?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel quos quis enim
+                            corrupti labore ex! Quidem, possimus iusto! Beatae earum rerum cupiditate enim impedit neque
+                            voluptatem cumque commodi. Ipsum?
                         </p>
 
                         <h3 class="title-third margin-bottom-10px">
                             Lorem ipsum dolor sit
                         </h3>
                         <p class="paragraph margin-bottom-50px">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel quos quis enim corrupti labore ex! Quidem, possimus iusto! Beatae earum rerum cupiditate enim impedit neque voluptatem cumque commodi. Ipsum?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel quos quis enim
+                            corrupti labore ex! Quidem, possimus iusto! Beatae earum rerum cupiditate enim impedit neque
+                            voluptatem cumque commodi. Ipsum?
                         </p>
 
                         <a href="#" class="btn-text">Read more &rarr;</a>
@@ -51,9 +59,12 @@
 
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="img/photo-ballons-1.png" alt="Photo-ballons-1" class="composition__photo composition__photo_n1">
-                            <img src="img/photo-ballons-2.png" alt="Photo-ballons-2" class="composition__photo composition__photo_n2">
-                            <img src="img/photo-ballons-3.png" alt="Photo-ballons-3" class="composition__photo composition__photo_n3">
+                            <img src="img/photo-ballons-1.png" alt="Photo-ballons-1"
+                                class="composition__photo composition__photo_n1">
+                            <img src="img/photo-ballons-2.png" alt="Photo-ballons-2"
+                                class="composition__photo composition__photo_n2">
+                            <img src="img/photo-ballons-3.png" alt="Photo-ballons-3"
+                                class="composition__photo composition__photo_n3">
                         </div>
                     </div>
                 </div>
@@ -65,28 +76,32 @@
                         <div class="adventure-card">
                             <i class="adventure-card__icon icon-Vector-3 margin-bottom-30px"></i>
                             <h3 class="title-third margin-bottom-10px">Adventures</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
+                                dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                     <div class="col-1-of-4">
                         <div class="adventure-card">
                             <i class="adventure-card__icon icon-Vector-2 margin-bottom-30px"></i>
                             <h3 class="title-third margin-bottom-10px">Adventures</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
+                                dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                     <div class="col-1-of-4">
                         <div class="adventure-card">
                             <i class="adventure-card__icon icon-Vector margin-bottom-30px"></i>
                             <h3 class="title-third margin-bottom-10px">Adventures</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
+                                dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                     <div class="col-1-of-4">
                         <div class="adventure-card">
                             <i class="adventure-card__icon icon-Vector-1 margin-bottom-30px"></i>
                             <h3 class="title-third margin-bottom-10px">Adventures</h3>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
+                                dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
@@ -103,7 +118,7 @@
                     <div class="col-1-of-3">
                         <div class="card-tour">
                             <div class="card-tour__side card-tour__side_front">
-                                <div class="card-tour__img margin-bottom-50px"></div>
+                                <div class="card-tour__img card-tour__img_1 margin-bottom-50px"></div>
                                 <h4 class="card-tour__title">
                                     <span class="card-tour__span card-tour__span_1">group</span>
                                     <br>
@@ -119,18 +134,135 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="card-tour__side card-tour__side_back">Back</div>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text card-tour__text_1">Full price:</p>
+                                    <p class="card-tour__text card-tour__text_2">300€</p>
+                                    <a href="#" class="btn btn_animated">Reserve</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
-
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_2 margin-bottom-50px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">Private</span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">tours</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <li>Groups of 6 people</li>
+                                        <li>Duration 2 hours</li>
+                                        <li>1 guide in the group</li>
+                                        <li>Flight range 6 km</li>
+                                        <li>Free souvenirs</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text card-tour__text_1">Full price:</p>
+                                    <p class="card-tour__text card-tour__text_2">300€</p>
+                                    <a href="#" class="btn btn_animated">Reserve</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-1-of-3">
-
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_3"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">Viewing</span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">platforms</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <li>Groups of 6 people</li>
+                                        <li>Duration 2 hours</li>
+                                        <li>1 guide in the group</li>
+                                        <li>Flight range 6 km</li>
+                                        <li>Free souvenirs</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text card-tour__text_1">Full price:</p>
+                                    <p class="card-tour__text card-tour__text_2">300€</p>
+                                    <a href="#" class="btn btn_animated">Reserve</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <div class="text-align-center">
+                    <a href="#" class="btn btn_animated">Reserve</a>
+                </div>
+            </section>
+
+            <section class="section-feedBack">
+                <div class="bg-gradient"></div>
+                <video class="bg-video" autoplay muted loop>
+                    <source src="img/Hot air balloons-1.mp4">
+                    <source src="img/Hot air balloons-1.webm">
+                </video>
+
+                <div class="text-align-center margin-bottom-80px">
+                    <h2 class="title-secondary title-secondary_white">
+                        Feedback from our clients
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="feedBack-card">
+                        <figure class="feedBack-card__img">
+                            <img src="img/feedBack-1.jpg" alt="persone">
+                            <figcaption class="feedBack-card__name">Lisa Frolova</figcaption>
+                        </figure>
+                        <div class="feedBack-card__box">
+                            <h3 class="title-third margin-bottom-10px">I GOT A LOT OF IMPRESSIONS</h3>
+                            <p class="paragraph">The task of organization, especially the further development of various
+                                forms of activity entails a process of introduction and modernization of appropriate
+                                conditions of activation. Thus, the beginning of the daily work on position formation
+                                entails.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="feedBack-card">
+                        <figure class="feedBack-card__img">
+                            <img src="img/feedBack-2.jpg" alt="persone">
+                            <figcaption class="feedBack-card__name">Anton Ryabin</figcaption>
+                        </figure>
+                        <div class="feedBack-card__box">
+                            <h3 class="title-third margin-bottom-10px">It was wonderful and unforgettable</h3>
+                            <p class="paragraph">The task of organization, especially the further development of various
+                                forms of activity entails a process of introduction and modernization of appropriate
+                                conditions of activation. Thus, the beginning of the daily work on position formation
+                                entails.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-align-center">
+                    <a href="#" class="btn btn_animated">Reserve</a>
+                </div>
+            </section>
+
+            <section class="">
+
             </section>
         </main>
     </div>
 </body>
+
 </html>
