add form and footer

--- a/index.html
+++ b/index.html
@@ -258,10 +258,73 @@
                 </div>
             </section>
 
-            <section class="">
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book_form">
+                            <form action="#" class="form">
+                                <div class="text-align-center margin-bottom-30px">
+                                    <h2 class="title-secondary">
+                                        Book a tour
+                                    </h2>
+                                </div>
 
+                                <div class="form__group">
+                                    <input type="text" class="form__input" placeholder="Name" id="name" required>
+                                    <label for="name" class="form__label">Your name</label>
+                                </div>
+
+                                <div class="form__group">
+                                    <input type="email" class="form__input" placeholder="Email" id="email" required>
+                                    <label for="email" class="form__label">Your Email</label>
+                                </div>
+
+                                <div class="form__group">
+                                    <div class="form__group-radio">
+                                        <input type="radio" class="form__input-radio" id="tour-1" name="checked">
+                                        <label for="tour-1" class="form__label-radio">
+                                            <span class="form__button-radio"></span>
+                                            Group tour
+                                        </label>
+                                    </div>
+
+                                    <div class="form__group-radio">
+                                        <input type="radio" class="form__input-radio" id="tour-2" name="checked">
+                                        <label for="tour-2" class="form__label-radio">
+                                            <span class="form__button-radio"></span>
+                                            Individual tour
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <div class="form__group">
+                                    <button class="btn btn_brown">
+                                        Reserve
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="row text-align-center">
+                <a href="#">
+                    <img src="icons/Icon-logo.svg" alt="logo" class="footer__logo">
+                </a>
+            </div>
+            <div class="row">
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">about us</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">discounts</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">best tours</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">price calculator</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">contact us</a></li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 
