--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
 
 <body>
     <div class="container">
+
+        <div class="navigation">
+            <input type="checkbox" class="navigation__toggle" id="navi-toggle">
+            <label for="navi-toggle" class="navigation__button">
+                <div class="navigation__icon"></div>
+            </label>
+            <div class="navigation__background"></div>
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="#" class="navigation__link">about us</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">discounts</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">best tours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">price calculator</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">contact us</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <header class="header">
             <img class="header__logo" src="icons/Icon-logo.svg" alt="Логотип воздушний шар">
             <div class="header__box">
@@ -37,7 +55,7 @@
                 <div class="row">
                     <div class="col-1-of-2">
                         <h3 class="title-third margin-bottom-10px">
-                            Позвольте себе приключение
+                            Allow yourself an adventure
                         </h3>
                         <p class="paragraph margin-bottom-30px">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel quos quis enim
@@ -310,7 +328,7 @@
         </main>
 
         <footer class="footer">
-            <div class="row text-align-center">
+            <div class="text-align-center row">
                 <a href="#">
                     <img src="icons/Icon-logo.svg" alt="logo" class="footer__logo">
                 </a>
