--- a/index.html
+++ b/index.html
@@ -77,12 +77,35 @@
 
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="img/photo-ballons-1.png" alt="Photo-ballons-1"
-                                class="composition__photo composition__photo_n1">
-                            <img src="img/photo-ballons-2.png" alt="Photo-ballons-2"
-                                class="composition__photo composition__photo_n2">
-                            <img src="img/photo-ballons-3.png" alt="Photo-ballons-3"
-                                class="composition__photo composition__photo_n3">
+                            <img 
+                            src="img/photo-ballons-1.png"
+                            srcset="img/photo-ballons-1.png 954w,
+                                    img\photo-ballons-1-small.png 318w"
+                            sizes="(max-width: 1240px) 23vw,
+                                    (max-width: 900px) 43vw,
+                                    (max-width: 600px) 47vw, 300px"
+                            alt="Photo-ballons-1"
+                            class="composition__photo composition__photo_n1">
+
+                            <img
+                            src="img/photo-ballons-2.png"
+                            srcset="img/photo-ballons-2.png 954w,
+                                    img\photo-ballons-2-small.png 318w"
+                            sizes="(max-width: 1240px) 23vw,
+                                    (max-width: 900px) 43vw,
+                                    (max-width: 600px) 47vw, 300px"
+                            alt="Photo-ballons-2"
+                            class="composition__photo composition__photo_n2">
+
+                            <img 
+                            src="img/photo-ballons-3.png"
+                            srcset="img/photo-ballons-3.png 954w,
+                                    img/photo-ballons-3-small.png 318w"
+                            sizes="(max-width: 1240px) 23vw,
+                                    (max-width: 900px) 43vw,
+                                    (max-width: 600px) 47vw, 300px"
+                            alt="Photo-ballons-3"
+                            class="composition__photo composition__photo_n3">
                         </div>
                     </div>
                 </div>
@@ -212,7 +235,7 @@
                                 <div class="card-tour__backSide-box">
                                     <p class="card-tour__text card-tour__text_1">Full price:</p>
                                     <p class="card-tour__text card-tour__text_2">300€</p>
-                                    <a href="#" class="btn btn_animated">Reserve</a>
+                                    <a href="#" class="btn btn_animated ">Reserve</a>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +243,7 @@
                 </div>
 
                 <div class="text-align-center">
-                    <a href="#" class="btn btn_animated">Reserve</a>
+                    <a href="#" class="btn btn_brown btn_animated">Reserve</a>
                 </div>
             </section>
 
